took away google maps and filestack api keys

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>CAP MAP</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Google Maps API [INSERT YOUR API KEY below] -->
-        <script defer src="//maps.googleapis.com/maps/api/js?key=AIzaSyCO_7-h561XHIkv_gujZWUK_QfKRFVCvns"></script>
+        <!-- Google Maps API [INSERT YOUR API KEY below, after equals sign] -->
+        <script defer src="//maps.googleapis.com/maps/api/js?key="></script>
         <!-- angular sources -->
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
